--- a/wiiotn-client/src/renderer/styles/pages/configure.scss
+++ b/wiiotn-client/src/renderer/styles/pages/configure.scss
@@ -13,6 +13,11 @@
 		.button {
 			width: 80%;
 		}
+		.status {
+			font-weight: 500;
+			font-size: .45rem;
+			margin-bottom: .2rem;
+		}
 	}
 	.right {
 		width: 50%;
