--- a/wiiotn-client/src/renderer/styles/dropdown.scss
+++ b/wiiotn-client/src/renderer/styles/dropdown.scss
@@ -11,6 +11,7 @@
 	border: 2px solid black;
 	background-color:#fff;
 	z-index: 101;
+	text-transform: capitalize;
 	//change width for mobile
 
 	.dropdown-options {
@@ -25,7 +26,6 @@
 		pointer-events: none;
 		z-index: -1000;
 		transition: 250ms opacity;
-
 		//adjust top and max-height for mobile 
 
 		&.open {
@@ -42,6 +42,7 @@
 	}
 	.caption-text{
 		font-size: 0.09375rem;
+		text-transform: capitalize;
 		//increase size for mobile
 	}
 	.caption-position{
